@@ -1,5 +1,7 @@
 = HEAD
 
+* Add per_thread_caching plugin, for using separate caches per thread instead of shared thread-safe caches (jeremyevans)
+
 * Add hash_matcher class method, for easily creating hash match methods (jeremyevans)
 
 * Add symbol_matchers plugin, for using symbol-specific matching regexps (jeremyevans)
